--- a/index2.html
+++ b/index2.html
@@ -25,24 +25,24 @@
                 <span class="space"><span class="comments">*我是一个程序猿,</span><br>
                 <span class="space"><span class="comments">*所以我用代码来描述我们的故事！.</span><br>
                 <span class="space"><span class="comments">*/</span><br>
-                Boy i = <span class="keyword">new</span> Boy(<span class="string">"小明"</span>);<br>
-                Girl u = <span class="keyword">new</span> Girl(<span class="string">"小红"</span>);<br>
-                <span class="comments">// 2017年2月14日,我们相遇！. </span><br>
+                Boy i = <span class="keyword">new</span> Boy(<span class="string">"小包"</span>);<br>
+                Girl u = <span class="keyword">new</span> Girl(<span class="string">"小王"</span>);<br>
+                <span class="comments">// 2019年8月31日,我们相遇！. </span><br>
                 i.love(u);<br>
                 u.sayOtherthing();<br>
                 <span class="comments">// 没有任何预示···。</span><br>
                 <span class="keyword">var</span> reason=i.ask(u);<br>
-                <span class="comments">// 我知道我们之间还并不了解。</span><br>
+                <span class="comments">// 我知道我们开始还并不了解。</span><br>
                 $("body").append(reason);<br>
-                <span class="comments">// 我也理解你当时的心情。。。</span><br>
+                <span class="comments">// 但是我们接触的时候，我们发现彼此的价值观是如何相似</span><br>
                 <span class="comments">// And take care of u and our love.</span><br>
                 i.takeCareOf(u);<br>
-                <span class="comments">//然后..... 你一直跑，我一直追。。。。</span><br>
+                <span class="comments">//我们真的是天作之合</span><br>
                 <span class="keyword">boolean</span> isAccept = <span class="keyword">false</span>;<br>
                 <span class="keyword">while</span> (isAccept) {<br>
                 <span class="placeholder">i.waitFor(u);<br>
                 <span class="placeholder"><span class="comments">// 我喊着要照顾你一辈子。</span><br>
-                <span class="placeholder"><span class="comments">// 你跑的那么快。</span><br>
+                <span class="placeholder"><span class="comments">// 我向你发誓。</span><br>
                 <span class="placeholder">isAccept = u.thinkOver();<br>
                 }<br>
                 <span class="comments">// 然后。我手中的板砖飞了过去······</span><br>
