--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <table width="100%" border="0" height="100%">
             <tbody>
             <tr>
-                <td align="center"><span class="big">今天</span>情人节</td>
+                <td align="center"><span class="big">今天</span>特殊的日子</td>
             </tr>
             </tbody>
         </table>
@@ -136,7 +136,7 @@
             <tbody>
             <tr>
                 <td align="center"><br>
-                    <span class="big">喜欢你很久了</span>
+                    <span class="big">见到你的第一面就有心扑通的感觉</span>
                 </td>
             </tr>
             </tbody>
