--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <tbody>
             <tr>
                 <td align="center"><br>
-                    <span class="big">见到你的第一面就有心扑通的感觉</span>
+                    <span class="big">见到你的第一面就想和你在一起</span>
                 </td>
             </tr>
             </tbody>
