--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <tbody>
             <tr>
                 <td align="center"><br>
-                    <img src="/image.jpg">
+                    <img src="https://bzybaobao.github.io/baobao.love.wangxin/image.png">
                     <span class="big">见到你的第一面就想和你在一起</span>
                 </td>
             </tr>
