--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             font-size: 25px;
             color: #FFF;
             font-family: "微软雅黑";
-            background: #f3961c;
+           background: #f3961c;
+           background:url('https://bzybaobao.github.io/baobao.love.wangxin/image.png')  no-repeat center center;
+           background-size:cover;
+           background-attachment:fixed;
+           background-color:#CCCCCC;
         }
+     
         div {
             text-align: left;
         }
@@ -136,7 +141,6 @@
             <tbody>
             <tr>
                 <td align="center"><br>
-                    <img src="https://bzybaobao.github.io/baobao.love.wangxin/image.png">
                     <span class="big">见到你的第一面就想和你在一起</span>
                 </td>
             </tr>
