--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,19 @@
             font-family: digit;
             src: url('./public/digital-7_mono.ttf') format("truetype");
         }
+        body {
+            text-align: center;
+            margin: 0px;
+            padding: 0px;
+            font-size: 25px;
+            color: #FFF;
+            font-family: "微软雅黑";
+           background: #f3961c;
+           background:url('https://bzybaobao.github.io/baobao.love.wangxin/image.png')  no-repeat center center;
+           background-size:cover;
+           background-attachment:fixed;
+           background-color:#CCCCCC;
+        }
     </style>
     <link href="./jscss/default.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="./jscss/jquery.js"></script>
