--- a/index3.html
+++ b/index3.html
@@ -30,6 +30,12 @@ body {
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
+   background: #f3961c;
+   background:url('https://bzybaobao.github.io/baobao.love.wangxin/image.png')  no-repeat center center;
+   background-size:cover;
+   background-attachment:fixed;
+   background-color:#CCCCCC;
+        
 }
 .des {
     font-size: 15px;
