--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=750,user-scalable=no">
-    <meta name="author" content="ShaoZeMing,szm19920426@gmail.com beijing">
+    <meta name="author" content="宝宝,szm19920426@gmail.com beijing">
     <title>我们的故事</title>
     <style type="text/css">
         @font-face {
