--- a/index2.html
+++ b/index2.html
@@ -87,7 +87,7 @@
             <div id="loveu" style="display: block;">
                 追你，永永远远。<br>
 
-                <div class="signature">- ShaoZeMing</div>
+                <div class="signature">-包志伟</div>
             </div>
         </div>
     </div>
