--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@ body {
     margin-right: 0px;
     margin-bottom: 0px;
    background: #f3961c;
-   background:url('https://bzybaobao.github.io/baobao.love.wangxin/image.png')  no-repeat center center;
+   background:url('https://bzybaobao.github.io/baobao.love.wangxin/image1.jpg')  no-repeat center center;
    background-size:cover;
    background-attachment:fixed;
    background-color:#CCCCCC;
